Added code to generate a vaccination control strategy